Update FAT debugging

--- a/fat_fs/test/Makefile
+++ b/fat_fs/test/Makefile
@@ -1,15 +1,16 @@
 CFLAGS = -g -I.. -I.
 
 DRIVER_DIR = ../..
-SRC = fattest1.c
 
 include ../fat.mk
 
 OBJ = $(SRC:.c=.o)
 
-all: fattest1
+all: fattest1 fatdump
 
-fattest1: $(OBJ)
+fattest1: fattest1.o $(OBJ)
+
+fatdump: fatdump.o $(OBJ)
 
 clean:
 	rm *.o
